<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/margin_s"
    android:layout_marginRight="@dimen/margin_s"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <ImageView
            android:id="@+id/posterIV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_s" />

            <TextView
                android:id="@+id/adultTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adult" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vote"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/voteTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_s"
                android:layout_marginRight="@dimen/margin_s2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_s"
                android:text="@string/voteAverage"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/voteAverageTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lang"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/langTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_s"
            android:layout_marginRight="@dimen/margin_s2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_s"
            android:text="@string/popularity"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/popularityTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/overviewTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="@dimen/margin_s"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:id="@+id/saveBtn"
            android:background="@drawable/button"
            />
    </LinearLayout>
</ScrollView>